@@ -1,0 +1,28 @@
+/* CSS for /dump/contact */
+body {
+  font-family: sans-serif;
+  font-size: "25px";
+  color: #ffffff;
+  text-align: left;
+  background-color: #1c1c1c;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+a {
+  text-decoration: none;
+  color: #ffffff;
+}
+a:link {
+  color: #ffffff;
+}
+a:visited {
+  color: #ffffff;
+  text-decoration: none;
+}
+a:hover {
+  color: #d8d8d8;
+  text-decoration: underline;
+}
+a:active {
+  color: #ffffff;
+}
