@@ -1,0 +1,29 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Contact | 3kh0</title>
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+    <link href="/css/contact.css" rel="stylesheet" />
+  </head>
+  <script src="/js/main.js"></script>
+  <body>
+    <h1>Contact</h1>
+    <p>Since some people do not know where to contact me, I put together a list of ways to get in touch with me!</p>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5756835229788588" crossorigin="anonymous"></script>
+    <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-5756835229788588" data-ad-slot="6230603875" data-ad-format="auto" data-full-width-responsive="true"></ins>
+    <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
+    <p>
+      <a target="_blank" href="https://github.com/3kh0/3kh0.github.io/issues">Github Issues</a> You can open a issue and most likely I will respond.<br>
+      <a target="_blank" href="mailto:echo-the-coder@tuta.io">echo-the-coder@tuta.io</a> Main email, you can email most stuff here (no spam filter, i turned it off)<br>
+      <a target="_blank" href="mailto:3kh0@riseup.net">3kh0@riseup.net</a> For formal stuff, like game takedowns, anything else that REALLY needs my attention.<br>
+      <a target="_blank" href="mailto:3kh0@proton.me">3kh0@proton.me</a> Yet, another email in case for some reason, my other ones are blocked.<br>
+      <a target="_blank" href="https://discord.gg/wv6huJAwEv">Discord</a> The discord is always a great place to message me or interact with other users of the site.<br>
+    </p>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5756835229788588" crossorigin="anonymous"></script>
+    <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-5756835229788588" data-ad-slot="6230603875" data-ad-format="auto" data-full-width-responsive="true"></ins>
+    <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
+  </body>
+</html>
