@@ -26,6 +26,7 @@
         <li><a href="https://github.com/3kh0/echolog" target="_blank">Echolog (IP logger)</a></li>
         <li><a href="https://github.com/3kh0/random-reddit-meme" target="_blank">Random reddit meme</a></li>
         <li><a href="https://github.com/3kh0/ext-remover" target="_blank">ext-remover (Disables extensions)</a></li>
+        <li><a href="contact.html">How to contact Echo</a></li>
       </ul>
     </div>
     <p class="text-center"><a href="/">Take me back to the homepage!</a></p>
