@@ -1,13 +1,0 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Playground | 3kh0</title>
-    <link rel="icon" href="/favicon.ico">
-  </head>
-  <body>
-    <p id="notif">Not set</p>
-    <script src="/js/notify.js"></script>
-    <button onclick="send()">Send notification</button>
-  </body>
-</html>
