@@ -39,6 +39,7 @@
       Welcome to 3kh0.github.io, your best option for unblocked games on the internet.<br />
       <br />
       <!-- Place any annoucements here -->
+      <a href="https://discord.gg/wv6huJAwEv" target="_blank">Join the discord!</a> If we get to 900 members by the end of the year, we will have a nitro giveaway and more!
       <br />
       <br />
       <br />
